[package]
name = "laminar"
version = "0.3.2"
authors = [
    "Lucio Franco <luciofranco14@gmail.com>",
    "Fletcher Haynes <fletcher@capitalprawn.com>",
    "TimonPost <timonpost@hotmail.nl>",
    "Justin LeFebvre <jstnlefebvre@gmail.com>"
]
description = "A simple semi-reliable UDP protocol for multiplayer games"
keywords = ["gamedev", "networking", "udp", "amethyst"]
categories = ["game-engines", "network-programming"]
exclude = ["examples/*", "docs/*", "benches/*"]

readme = "README.md"
license = "MIT/Apache-2.0"

repository = "https://github.com/amethyst/laminar"
autobenches = false
edition = "2018"

[dependencies]
byteorder = "1.3"
crc = "1.8"
crossbeam-channel = "0.3"
lazy_static = "1.4"
log = "0.4"
rand = "0.7"
rand_pcg = "0.2"

clap = { version = "2.33", features = ["yaml"], optional = true }
env_logger = { version = "0.6", optional = true }

[dev-dependencies]
bincode = "1.1.4"
criterion = "0.3"
serde = "1.0"
serde_derive = "1.0"
quickcheck = "0.9"
quickcheck_macros = "0.8"

[features]
tester = [
  "env_logger",
  "clap"
]

[[bench]]
name = "packet_processing"
harness = false

[[bin]]
name = "laminar-tester"
required-features = ["tester"]