[package]
name = "laminar"
version = "0.5.0"
authors = [
    "Lucio Franco <luciofranco14@gmail.com>",
    "Fletcher Haynes <fletcher@capitalprawn.com>",
    "TimonPost <timonpost@hotmail.nl>",
    "Justin LeFebvre <jstnlefebvre@gmail.com>"
]
description = "A simple semi-reliable UDP protocol for multiplayer games"
keywords = ["gamedev", "networking", "udp", "amethyst"]
categories = ["game-engines", "network-programming"]
exclude = ["examples/*", "docs/*", "benches/*"]

readme = "README.md"
license = "MIT OR Apache-2.0"

repository = "https://github.com/amethyst/laminar"
autobenches = false
edition = "2021"

[dependencies]
byteorder = "1.5.0"
crossbeam-channel = "0.5"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
rand_pcg = "0.3"

clap = { version = "4.4", optional = true }
env_logger = { version = "0.10", optional = true }

[dev-dependencies]
bincode = "1.3.1"
criterion = "0.5"
serde = "1.0"
serde_derive = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
tester = [
  "env_logger",
  "clap"
]

[[bench]]
name = "packet_processing"
path = "benches/packet_processing.rs"
harness = false

[[bin]]
name = "laminar-tester"
required-features = ["tester"]

[lib]
doctest = false